DM: Code cleanup
Reorder some scenario keys.
Reorder side keys, removing unneeded ones, add keys & tags for clarity.
Move some events/macros.
Using [leader] in [side] for all non-player sides.
Change level improvements using [unit] instead of [recall] in a few places.

--- a/data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg
@@ -1,9 +1,9 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "This Valley Belongs to Me"
     id=02_This_Valley_Belongs_to_Me
-    next_scenario=03_The_Road_to_Weldyn
+    name=_ "This Valley Belongs to Me"
     {MEMOIRS_MAP 02_This_Valley_Belongs_to_Me.map}
+    next_scenario=03_The_Road_to_Weldyn
     turns=24
     {DEFAULT_SCHEDULE}
 
@@ -15,43 +15,43 @@
     {MEMOIRS_ITEM_WELL 24 19}
 
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         recruit=Mage,Spearman,Horseman
+        save_id=Player
         team_name=allies
         user_team_name= _ "Mages"
         {FLAG_VARIANT long}
-    [/side]
-    [event]
-        name=prestart
-
+        {YOUNG_DELFADOR}
         [unit]
             {METHOR}
             x,y=21,16
         [/unit]
+    [/side]
+    [event]
+        name=prestart
         {MODIFY_UNIT (side=1) facing nw}
     [/event]
     {STARTING_VILLAGES 1 12}
 
     [side]
-        type=Goblin Pillager
-        id=Grogor-Tuk
-        name= _ "Grogor-Tuk"
-        facing=se
         side=2
-        canrecruit=yes
+        controller=ai
         recruit=Wolf Rider,Orcish Grunt
         {GOLD 70 150 200}
         team_name=enemies
         user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Grogor-Tuk
+            name= _ "Grogor-Tuk"
+            type=Goblin Pillager
+            facing=se
+        [/leader]
         [ai]
             recruitment_pattern=scout,scout,fighter
             village_value=2 # they want to pillage!
         [/ai]
-        {FLAG_VARIANT6 ragged}
     [/side]
 
     [story]
