--- a/data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg
@@ -1,9 +1,9 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "Leollyn"
     id=04_Leollyn
-    next_scenario=05_Council_in_Weldyn
+    name=_ "Leollyn"
     {MEMOIRS_MAP 04_Leollyn.map}
+    next_scenario=05_Council_in_Weldyn
     turns=24
     {DEFAULT_SCHEDULE}
 
@@ -15,16 +15,14 @@
     {DM_TRACK {SEARCH_STAGE4}}
 
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
+        recruit={LOYALISTS}
+        save_id=Player
         team_name=allies
         user_team_name= _ "Mages"
-
-        recruit={LOYALISTS}
         {FLAG_VARIANT long}
+        {YOUNG_DELFADOR}
     [/side]
     [event]
         name=prestart
@@ -51,14 +49,19 @@
     [/event]
 
     [side]
-        type=Orcish Slayer
-        id=Hagha-Tan
-        name= _ "Hagha-Tan"
-        facing=se
         side=2
         controller=ai
-        canrecruit=yes
         recruit=Wolf Rider, Orcish Assassin, Orcish Archer
+        {GOLD 200 200 300}
+        team_name=enemies
+        user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Hagha-Tan
+            name= _ "Hagha-Tan"
+            type=Orcish Slayer
+            facing=se
+        [/leader]
         [ai]
             recruitment_pattern=scout, mixed fighter, mixed fighter, archer
             # there are a lot of close villages
@@ -74,39 +77,31 @@
                 value=3.0
             [/goal]
         [/ai]
-        {GOLD 200 200 300}
-        team_name=enemies
-        user_team_name= _ "Pillagers"
-        {FLAG_VARIANT6 ragged}
     [/side]
 
     [side]
-        type=Arch Mage
-        id=Leollyn
-        name= _ "Leollyn"
-        profile=portraits/leollyn.png
-        facing=se
-        gender=male
         side=3
         controller=ai
-        canrecruit=yes
         recruit=Red Mage,White Mage
-        [ai]
-            recruitment_pattern=mixed fighter,mixed fighter,healer
-            aggression=0.0
-        [/ai]
         gold=0
         income=8
         team_name=allies
         user_team_name= _ "Loyalists"
-        {UNIT 3 Spearman 2 18 (ai_special=guardian)}
-        {FACING se}
-        {UNIT 3 Spearman 4 18 (ai_special=guardian)}
-        {FACING se}
         {FLAG_VARIANT loyalist}
+        [leader]
+            id=Leollyn
+            name= _ "Leollyn"
+            type=Arch Mage
+            profile=portraits/leollyn.png
+            facing=se
+        [/leader]
+        {UNIT 3 Spearman 2 18 (ai_special=guardian)} {FACING se}
+        {UNIT 3 Spearman 4 18 (ai_special=guardian)} {FACING se}
+        [ai]
+            recruitment_pattern=mixed fighter,mixed fighter,healer
+            aggression=0.0
+        [/ai]
     [/side]
-
-    {MEMOIRS_DEATHS}
 
     #############################
     # defeat player if leollyn is killed
@@ -283,4 +278,6 @@
             message=_"Of course — do you know any other kings by that name? I was one of his father’s most trusted advisors until he passed away earlier this year, and I still have the son’s ear, though being young he listens perhaps less well than he should."
         [/message]
     [/event]
+
+    {MEMOIRS_DEATHS}
 [/scenario]
