--- a/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
@@ -1,9 +1,9 @@
 #textdomain wesnoth-dm
 [scenario]
-    name= _ "Council in Weldyn"
     id=05_Council_in_Weldyn
-    next_scenario=06_Swamps_of_Illuven
+    name= _ "Council in Weldyn"
     {MEMOIRS_MAP 05_Council_in_Weldyn.map}
+    next_scenario=06_Swamps_of_Illuven
     theme=Cutscene_Minimal
     {DEFAULT_SCHEDULE}
 
@@ -12,32 +12,32 @@
     {DM_TRACK {SEARCH_STAGE5}}
 
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         recruit=Mage,Spearman,Horseman,Bowman,Cavalryman,Heavy Infantryman
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
+        {YOUNG_DELFADOR}
     [/side]
 
     [side]
-        type=King of Wesnoth
-        id=Garard
-        name=_ "Garard"
-        profile=portraits/garard.png
         side=2
-        recruit=Royal Guard
+        controller=null
         team_name=allies
         user_team_name= _ "Loyalists"
-        controller=ai
+        {FLAG_VARIANT loyalist}
+        [leader]
+            id=Garard
+            name=_ "Garard"
+            type=King of Wesnoth
+            profile=portraits/garard.png
+        [/leader]
         # guards are facing outward
         {UNIT 2 (Royal Guard) 23 18 (facing=nw)}
         {UNIT 2 (Royal Guard) 29 18 (facing=ne)}
         {UNIT 2 (Royal Guard) 24 22 (facing=sw)}
         {UNIT 2 (Royal Guard) 30 21 (facing=se)}
-        {FLAG_VARIANT loyalist}
     [/side]
 
     [event]
@@ -48,24 +48,21 @@
         [/scroll_to_unit]
 
         [unit]
-            type=Arch Mage
+            side=2
             id=Leollyn
             name=_ "Leollyn"
+            type=Arch Mage
             profile=portraits/leollyn.png
+            x,y=27,21
             facing=ne
-            gender=male
-            x=27
-            y=21
-            side=2
         [/unit]
         [unit]
-            type=Cavalryman
+            side=2
             id=Gurcyn
             name=_ "Gurcyn"
+            type=Cavalryman
+            x,y=25,20
             facing=se
-            x=25
-            y=20
-            side=2
         [/unit]
 
         [message]
@@ -78,10 +75,9 @@
         [/redraw]
 
         [unit]
-            {LIONEL}
-            x=24
-            y=14
             side=2
+            {LIONEL}
+            x,y=24,14
         [/unit]
         {MOVE_UNIT (id=Lionel) 26 19}
         {MODIFY_UNIT (id=Lionel) facing se}
