--- a/data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg
@@ -1,12 +1,11 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "Ur-Thorodor"
     id=08_Ur-Thorodor
-    next_scenario=09_Houses_of_the_Dead
+    name=_ "Ur-Thorodor"
     {MEMOIRS_MAP 08_Ur-Thorodor.map}
+    next_scenario=09_Houses_of_the_Dead
     turns=18
     victory_when_enemies_defeated=no
-
     {DEFAULT_SCHEDULE}
 
     {SCENARIO_MUSIC elvish-theme.ogg}   # No story part, so no intro music
@@ -16,41 +15,40 @@
 
     {DM_TRACK {SEARCH_STAGE8}}
 
-    #### Delfador's code ####
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
-        recruit=Mage,Spearman,Horseman,Bowman
+        recruit=Mage,Spearman,Horseman,Bowman,Cavalryman,Heavy Infantryman
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
+        {YOUNG_DELFADOR}
+        [unit]
+            {LIONEL}
+            placement=leader
+        [/unit]
     [/side]
     [event]
         name=prestart
         {MODIFY_UNIT (id=Delfador) facing nw}
-        [recall]
-            id=Lionel
-        [/recall]
         {MODIFY_UNIT (id=Lionel) facing se}
     [/event]
     {STARTING_VILLAGES 1 4}
-    #### /Delfador's code ####
 
-    [side] # 23,11
-        type=Ancient Wose
-        id=Ur-Thorodor
-        name= _ "Ur-Thorodor"
-        facing=sw
+    [side]
         side=2
-        canrecruit=yes
         controller=ai
-        recruit=Wose,Gryphon,Wose Shaman
+        recruit=Gryphon,Wose,Wose Shaman
+        {GOLD 200 250 300}
         team_name=enemies
         user_team_name= _ "Wose"
-        {GOLD 200 250 300}
+        [leader]
+            id=Ur-Thorodor
+            name= _ "Ur-Thorodor"
+            type=Ancient Wose
+            facing=sw
+        [/leader]
         [ai]
             passive_leader=yes #To avoid him being away from keep and next to Delfador
             caution=0.8 # make him use those woses well
@@ -62,14 +60,12 @@
 
     [side]
         side=3
+        controller=null
         hidden=yes
-        controller=ai
         team_name=enemies
         user_team_name= _ "Pillagers"
         no_leader=yes
     [/side]
-
-    {MEMOIRS_DEATHS}
 
     [event]
         name=start
@@ -330,4 +326,6 @@ But as Delfador’s meditation deepened, and the woses sank into their timeless 
             hidden=yes
         [/modify_side]
     [/event]
+
+    {MEMOIRS_DEATHS}
 [/scenario]
