--- a/data/campaigns/Delfadors_Memoirs/scenarios/10_The_Gate_Between_Worlds.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/10_The_Gate_Between_Worlds.cfg
@@ -1,44 +1,40 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_"The Gate Between Worlds"
     id=10_The_Gate_Between_Worlds
-    next_scenario=11_Wasteland
+    name=_"The Gate Between Worlds"
     {MEMOIRS_MAP 10_The_Gate_Between_Worlds.map}
+    next_scenario=11_Wasteland
     turns=24
-
     {LAND_OF_THE_DEAD}
 
     # Could use "The Deep Path", but monotony is what we want here
     {SCENARIO_MUSIC underground.ogg}
 
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         recruit=Ghost
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
+        {YOUNG_DELFADOR}
     [/side]
-
     {STARTING_VILLAGES 1 5}
 
     [side]
-        {ILIAH_MALAL (Necromancer)}
-        facing=se
         side=2
         controller=ai
-        recruit=Vampire Bat,Dark Adept,Thug
+        recruit=Dark Adept,Thug,Vampire Bat
+        {GOLD 120 200 250}
         team_name=enemies
         user_team_name= _ "Undead"
-        {GOLD 120 200 250}
         {FLAG_VARIANT undead}
+        [leader]
+            {ILIAH_MALAL (Necromancer)}
+            facing=se
+        [/leader]
     [/side]
-
     {STARTING_VILLAGES 2 5}
-
-    {MEMOIRS_DEATHS}
 
     #############################
     # A bit of hackery to get the map border to look right, after
@@ -241,4 +237,6 @@
             result=victory
         [/endlevel]
     [/event]
+
+    {MEMOIRS_DEATHS}
 [/scenario]
