--- a/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
@@ -2,8 +2,8 @@
 [scenario]
     id=15_Save_the_King
     name= _ "Save the King"
-    next_scenario=16_Dark_Sky_Over_Weldyn
     {MEMOIRS_MAP 15_Save_the_King.map}
+    next_scenario=16_Dark_Sky_Over_Weldyn
     {TURNS 35 30 25}
     {DEFAULT_SCHEDULE}
 
@@ -28,33 +28,42 @@
 
     #wmllint: validate-off
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         recruit={ELVES}
+        {GOLD 200 150 100}
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT long}
-        {GOLD 200 150 100}
+        {YOUNG_DELFADOR}
+        [unit]
+            {KALENZ}
+            placement=leader
+        [/unit]
+        [unit]
+            {CHANTAL}
+            placement=leader
+        [/unit]
     [/side]
     #wmllint: validate-on
 
     [side]
-        type=King of Wesnoth
-        id=Garard II
-        name=_ "Garard II"
-        profile="portraits/garard.png"
-        facing=nw
         side=2
-        canrecruit=yes
         controller=ai
-        team_name=allies
-        user_team_name= _ "Loyalists"
         recruit=Heavy Infantryman, Spearman, Bowman, Cavalryman, Horseman, Mage, Royal Guard, Shock Trooper, Swordsman
         {GOLD 300 450 600}
         {INCOME 0 0 0}
+        team_name=allies
+        user_team_name= _ "Loyalists"
+        {FLAG_VARIANT loyalist}
+        [leader]
+            id=Garard II
+            name=_ "Garard II"
+            type=King of Wesnoth
+            profile="portraits/garard.png"
+            facing=nw
+        [/leader]
         [ai]
             passive_leader=yes
             [goal]
@@ -71,27 +80,17 @@
                 [/not]
             [/avoid]
         [/ai]
-
-        {FLAG_VARIANT loyalist}
     [/side]
 
     [side]
-        type=Orcish Sovereign
-        id=Zorlan
-        name=_ "Zorlan"
-        profile="portraits/zorlan.png"
-        facing=sw
         side=3
-        canrecruit=yes
         controller=ai
 #ifdef EASY
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
 #endif
-
 #ifdef NORMAL
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Knight, Orcish Slayer, Goblin Pillager, Goblin Spearman
 #endif
-
 #ifdef HARD
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman
 #endif
@@ -99,23 +98,24 @@
         team_name=enemies
         user_team_name= _ "Pillagers"
         {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Zorlan
+            name=_ "Zorlan"
+            type=Orcish Sovereign
+            profile="portraits/zorlan.png"
+            facing=sw
+        [/leader]
     [/side]
+
     [side]
-        type=Orcish Warrior
-        id="T'bhan"
-        name=_ "T’bhan"
-        facing=ne
         side=4
-        canrecruit=yes
         controller=ai
 #ifdef EASY
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
 #endif
-
 #ifdef NORMAL
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Knight, Orcish Slayer, Goblin Pillager, Goblin Spearman
 #endif
-
 #ifdef HARD
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman
 #endif
@@ -123,42 +123,40 @@
         team_name=enemies
         user_team_name= _ "Pillagers"
         {FLAG_VARIANT6 ragged}
+        [leader]
+            id="T'bhan"
+            name=_ "T’bhan"
+            type=Orcish Warrior
+            facing=ne
+        [/leader]
     [/side]
-    [side]
-        type=Orcish Warrior
-        id=Qgthun
-        name=_ "Qgthun"
-        facing=nw
-        side=5
-        canrecruit=yes
-        controller=ai
 
+    [side]
+        side=5
+        controller=ai
 #ifdef EASY
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
 #endif
-
 #ifdef NORMAL
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Knight, Orcish Slayer, Goblin Pillager, Goblin Spearman
 #endif
-
 #ifdef HARD
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman
 #endif
         {GOLD 150 250 300}
         team_name=enemies
         user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Qgthun
+            name=_ "Qgthun"
+            type=Orcish Warrior
+            facing=nw
+        [/leader]
     [/side]
+
     [side]
-#ifndef EASY
-        type=Great Troll
-#else
-        type=Troll Hero
-#endif
-        id=Trgrau
-        name=_ "Trgrau"
-        facing=sw
         side=6
-        canrecruit=yes
         controller=ai
 #ifdef EASY
         recruit=Troll Whelp
@@ -166,27 +164,23 @@
 #ifdef NORMAL
         recruit=Troll Whelp,Troll,Troll Rocklobber
 #endif
-
 #ifdef HARD
         recruit=Troll Whelp,Troll,Troll Warrior,Troll Rocklobber
 #endif
-
         {GOLD 150 250 300}
         team_name=enemies
         user_team_name= _ "Pillagers"
         {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Trgrau
+            name=_ "Trgrau"
+            type={ON_DIFFICULTY (Troll Hero) (Great Troll) (Great Troll)}
+            facing=sw
+        [/leader]
     [/side]
+
     [event]
         name=prestart
-
-        [recall]
-            id=Chantal
-        [/recall]
-
-        [recall]
-            id=Kalenz
-        [/recall]
-
         [objectives]
             side=1
             [objective]
@@ -428,15 +422,7 @@
     # Since this event uses the player's turn, the orcs will not be
     # able to use their gold until the following turn.
     [event]
-#ifdef HARD
-        name=turn 8
-#endif
-#ifdef NORMAL
-        name=turn 9
-#endif
-#ifdef EASY
-        name=turn 10
-#endif
+        name=turn {ON_DIFFICULTY 10 9 8}
         [gold]
             side=4
             {QUANTITY amount 140 230 320}
