--- a/data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg
@@ -1,9 +1,9 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "The Portal of Doom"
     id=18_The_Portal_of_Doom
-    next_scenario=19_Showdown_in_the_Northern_Swamp
+    name=_ "The Portal of Doom"
     {MEMOIRS_MAP 18_The_Portal_of_Doom.map}
+    next_scenario=19_Showdown_in_the_Northern_Swamp
     turns=40
     victory_when_enemies_defeated=no
     {DEFAULT_SCHEDULE}
@@ -45,47 +45,48 @@
     {DM_TRACK {TRIUMPH_STAGE2}}
 
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         recruit={LOYALISTS}
+        {GOLD 200 180 160}
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
-        {GOLD 200 180 160}
         {FLAG_VARIANT loyalist}
-    [/side]
-    [event]
-        name=prestart
-
+        {YOUNG_DELFADOR}
         [unit]
             {ULREK}
             placement=leader
         [/unit]
+    [/side]
+    [event]
+        name=prestart
         {DELFADOR_GETS_DWARVES}
         {MODIFY_UNIT (side=1) facing se}
     [/event]
 
     [side]
-        type=Death Knight
-        id=Prepolur
-        name=_ "Prepolur"
-        facing=nw
         side=2
-        canrecruit=yes
         controller=ai
 #ifdef EASY
         recruit=Skeleton, Skeleton Archer
 #endif
-
 #ifdef NORMAL
         recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter
 #endif
-
 #ifdef HARD
         recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade
 #endif
+        {GOLD 200 200 250}
+        team_name=enemies
+        user_team_name= _ "Undead"
+        {FLAG_VARIANT undead}
+        [leader]
+            id=Prepolur
+            name=_ "Prepolur"
+            type=Death Knight
+            facing=nw
+        [/leader]
         [ai]
             aggression=0.0
             #recruitment_pattern=scout, mixed fighter, archer
@@ -102,30 +103,30 @@
                 value=3.0
             [/goal]
         [/ai]
-        {GOLD 200 200 250}
-        team_name=enemies
-        user_team_name= _ "Undead"
-        {FLAG_VARIANT undead}
     [/side]
+
     [side]
-        type=Necromancer
-        id=Unuvim-Malal
-        name=_ "Unuvim-Malal"
-        facing=nw
         side=3
-        canrecruit=yes
         controller=ai
 #ifdef EASY
         recruit=Ghost, Vampire Bat
 #endif
-
 #ifdef NORMAL
         recruit=Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept, Wraith
 #endif
-
 #ifdef HARD
         recruit=Ghost, Vampire Bat, Shadow, Nightgaunt, Spectre, Blood Bat, Vampire Bat, Wraith
 #endif
+        {GOLD 200 200 250}
+        team_name=enemies
+        user_team_name= _ "Undead"
+        {FLAG_VARIANT undead}
+        [leader]
+            id=Unuvim-Malal
+            name=_ "Unuvim-Malal"
+            type=Necromancer
+            facing=nw
+        [/leader]
         [ai]
             aggression=0.0
             #recruitment_pattern=scout, mixed fighter, archer
@@ -142,31 +143,25 @@
                 value=3.0
             [/goal]
         [/ai]
-        {GOLD 200 200 250}
-        team_name=enemies
-        user_team_name= _ "Undead"
-        {FLAG_VARIANT undead}
     [/side]
+
     [side]
-        no_leader=yes #Iliah-Malal arrives later
         side=4
         controller=ai
         hidden=yes
-        team_name=enemies
-        user_team_name= _ "Undead"
 #ifdef EASY
         recruit=Skeleton, Skeleton Archer, Vampire Bat, Ghost
 #endif
-
 #ifdef NORMAL
         recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter, Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept
 #endif
-
 #ifdef HARD
         recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade, Ghost, Wraith, Shadow, Nightgaunt, Chocobone, Dark Adept, Spectre, Blood Bat, Vampire Bat
 #endif
         gold=0
         {NO_INCOME}
+        team_name=enemies
+        user_team_name= _ "Undead"
         [ai]
             recruitment_pattern=scout,fighter,archer
             [goal]
@@ -178,9 +173,8 @@
             [/goal]
         [/ai]
         {FLAG_VARIANT undead}
+        no_leader=yes #Iliah-Malal arrives later
     [/side]
-
-    {MEMOIRS_DEATHS}
 
     [event]
         name=prestart
@@ -453,11 +447,11 @@
 
         # Materialize the bad guy on his keep
         [unit]
-            {ILIAH_MALAL (Ancient Lich)}
-            facing=sw
             side=4
-            x=18
-            y=3
+            {ILIAH_MALAL (Ancient Lich)}
+            canrecruit=yes
+            x,y=18,3
+            facing=sw
         [/unit]
 
         {NAMED_UNIT 4 (Draug)      18 4 Samun _"Samun" (facing=sw)}
@@ -568,4 +562,6 @@
             terrain=Khr
         [/terrain]
     [/event]
+
+    {MEMOIRS_DEATHS}
 [/scenario]
