--- a/data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg
@@ -2,8 +2,8 @@
 [scenario]
     id=20_Prince_of_Wesnoth
     name= _ "Prince of Wesnoth"
-    next_scenario=21_Clash_at_the_Manor
     {MEMOIRS_MAP 20_Prince_of_Wesnoth.map}
+    next_scenario=21_Clash_at_the_Manor
     {TURNS 20 22 24}
     {DEFAULT_SCHEDULE}
 
@@ -39,58 +39,45 @@
     [/story]
     {DM_TRACK {BOOK_STAGE1}}
 
-    #### Kalenz's code ####
     #wmllint: validate-off
     [side]
-        # wmllint: recognize Kalenz
-        recruit={ELVES}
         side=1
-        no_leader=yes
         controller=human
+        recruit={ELVES}
+        {GOLD 130 100 100}
+        fog=yes
+        save_id=Player
         team_name=allies
         user_team_name= _ "Elves"
-        save_id=Player
-        persistent=yes
-        fog=yes
-        [unit]
-            {KALENZ}
-            x=2
-            y=19
-            canrecruit=yes
-        [/unit]
-        {GOLD 130 100 100}
         {FLAG_VARIANT wood-elvish}
+        # wmllint: recognize Kalenz
+        {KALENZ}
+        canrecruit=yes
+        placement=leader
     [/side]
     #wmllint: validate-on
-
     {STARTING_VILLAGES_ALL 1}
-
     [event]
         name=prestart
-
-        [recall]
-            id=Kalenz
-            x,y=2,19
-        [/recall]
-
         {DELFADOR_JOINS_ELVES}
     [/event]
-    #### /Kalenz's code
 
     [side]
-        type=General
-        id=Eldred
-        name=_ "Eldred"
-        profile="portraits/eldred.png"
-        facing=sw
         side=2
-        canrecruit=yes
         controller=ai
-        team_name=enemies
-        user_team_name= _ "Loyalists"
         recruit=Heavy Infantryman,Spearman,Bowman,Cavalryman,Horseman,Mage,Swordsman
         {GOLD 130 180 200}
         {INCOME 0 2 2}
+        team_name=enemies
+        user_team_name= _ "Loyalists"
+        {FLAG_VARIANT loyalist}
+        [leader]
+            id=Eldred
+            name=_ "Eldred"
+            type=General
+            profile="portraits/eldred.png"
+            facing=sw
+        [/leader]
         [ai]
             recruitment_pattern=fighter,archer,mixed fighter,scout
             aggression=1.0
@@ -104,27 +91,27 @@
                 value=3.0
             [/goal]
         [/ai]
-        {FLAG_VARIANT loyalist}
     [/side]
 
     [side]
-        type=General
-        id=Lowel
-        name=_ "Lowel"
-        facing=sw
         side=3
-        canrecruit=yes
         controller=ai
         recruit=Heavy Infantryman,Spearman,Bowman,Cavalryman,Horseman,Mage,Thug,Footpad,Poacher,Rogue,Thief,Outlaw,Bandit,Assassin
+        {GOLD 150 230 290}
         team_name=enemies
         user_team_name= _ "Loyalists"
-        {GOLD 150 230 290}
+        {FLAG_VARIANT loyalist}
+        [leader]
+            id=Lowel
+            name=_ "Lowel"
+            type=General
+            facing=sw
+        [/leader]
         [ai]
             recruitment_pattern=fighter,archer,mixed fighter,scout
             aggression=1.0
             caution=0.0
         [/ai]
-        {FLAG_VARIANT loyalist}
     [/side]
 
     [event]
@@ -263,5 +250,6 @@
             message= _ "We are too late! All is lost!"
         [/message]
     [/event]
+
     {MEMOIRS_DEATHS}
 [/scenario]
