--- a/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
@@ -1,37 +1,44 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "Overture"
     id=01_Overture
-    next_scenario=02_This_Valley_Belongs_to_Me
+    name=_ "Overture"
     {MEMOIRS_MAP 01_Overture.map}
+    next_scenario=02_This_Valley_Belongs_to_Me
     theme=Cutscene_Minimal
     {MORNING}
 
     {INTRO_AND_SCENARIO_MUSIC revelation.ogg heroes_rite.ogg}
 
     [side]
+        side=1
+        controller=human
+        gold=0
+        save_id=Player
+        team_name=allies
+        user_team_name= _ "Mages"
         # wmllint: who YOUNG_DELFADOR is Delfador
         {YOUNG_DELFADOR}
         facing=nw
-        side=1
-        save_id=Player
-        persistent=yes
-        controller=human
-        recruit=Mage,Spearman,Horseman
-        team_name=allies
-        user_team_name= _ "Mages"
+        [unit]
+            {METHOR}
+            x,y=18,15
+            facing=nw
+        [/unit]
     [/side]
 
     [side]
-        type=Mage of Light
-        id=Marshal
-        name=_"Marshal"
-        facing=sw
         side=2
-        canrecruit=no
+        controller=null
         team_name=allies
         user_team_name= _ "Mages"
-        controller=ai
+        no_leader=yes
+        [unit]
+            id=Marshal
+            name=_"Marshal"
+            type=Mage of Light
+            placement=leader
+            facing=sw
+        [/unit]
         {NAMED_UNIT 2 (Great Mage)  8   9 "First Oracle" (_"First Oracle") (ai_special,facing,profile=guardian,se,portraits/oracle1.png)}
         {NAMED_UNIT 2 (Great Mage) 10  11 "Second Oracle" (_"Second Oracle")  (ai_special,facing,profile=guardian,sw,portraits/oracle2.png)}
         {NAMED_UNIT 2 (Great Mage)  8  13 "Third Oracle" (_"Third Oracle")  (ai_special,facing,profile=guardian,nw,portraits/oracle3.png)}
@@ -59,17 +66,6 @@
         [/part]
     [/story]
     {DM_TRACK {SEARCH_STAGE1}}
-
-    [event]
-        name=prestart
-
-        [unit]
-            {METHOR}
-            facing=nw
-            side=1
-            x,y=18,15
-        [/unit]
-    [/event]
 
     [event]
         name=start
