--- a/data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg
@@ -1,10 +1,12 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "Wasteland"
     id=11_Wasteland
-    next_scenario=12_Terror_at_the_Ford_of_Parthyn
+    name=_ "Wasteland"
     {MEMOIRS_MAP 11_Wasteland.map}
+    next_scenario=12_Terror_at_the_Ford_of_Parthyn
     turns=24
+    disallow_recall=yes
+    victory_when_enemies_defeated=no
     {DEFAULT_SCHEDULE}
 
     {SCENARIO_MUSIC elvish-theme.ogg}   # No story part, so no intro music
@@ -14,65 +16,58 @@
 
     {DM_TRACK {CHANTAL_STAGE1} }
 
-    victory_when_enemies_defeated=no
-    disallow_recall=yes
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
+        shroud=yes
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
-        shroud=yes
         {FLAG_VARIANT long}
+        {YOUNG_DELFADOR}
     [/side]
-
     {STARTING_VILLAGES 1 6}
 
     [side]
-        type=Orcish Warlord
-        id=Tish Golub
-        name= _ "Tish Golub"
-        facing=ne
         side=2
-        canrecruit=yes
         controller=ai
+        hidden=yes
         recruit=Orcish Archer,Orcish Grunt,Wolf Rider,Orcish Crossbowman,Orcish Warrior,Troll Whelp
+        {GOLD 150 200 250}
         team_name=enemies
         user_team_name= _ "Pillagers"
-        {GOLD 150 200 250}
         {FLAG_VARIANT6 ragged}
-        hidden=yes
+        [leader]
+            id=Tish Golub
+            name= _ "Tish Golub"
+            type=Orcish Warlord
+            facing=ne
+        [/leader]
     [/side]
-
     {STARTING_VILLAGES 1 4}
 
     [side]
-        {CHANTAL}
+        side=3
+        controller=ai
+        hidden=yes
+        recruit=Elvish Ranger,Elvish Rider
+        {GOLD 100 100 100}
         team_name=allies
         user_team_name= _ "Elves"
+        {FLAG_VARIANT wood-elvish}
         # wmllint: recognize Chantal
-        type=Elvish Druid
-        facing=sw
-        {GOLD 100 100 100}
+        [leader]
+            {CHANTAL}
+            facing=sw
+        [/leader]
+        {NAMED_UNIT 3 (Elvish Ranger) 21 12 (Istelimir) ( _ "Istelimir") (ai_special=guardian)} {FACING se}
+        {NAMED_UNIT 3 (Elvish Ranger) 33 11 (Atellas) ( _ "Atellas") (ai_special=guardian)} {FACING sw}
         [ai]
             caution=0.5
             aggression=0.0 # let player do the dirty work
         [/ai]
-        {NAMED_UNIT 3 (Elvish Ranger) 21 12 (Istelimir) ( _ "Istelimir") (ai_special=guardian)}
-        {FACING se}
-        {NAMED_UNIT 3 (Elvish Ranger) 33 11 (Atellas) ( _ "Atellas") (ai_special=guardian)}
-        {FACING sw}
-        {FLAG_VARIANT wood-elvish}
-        hidden=yes
     [/side]
-
     {STARTING_VILLAGES 3 5}
-#define NOCHANTALDEATH
-#enddef
-    {MEMOIRS_DEATHS}
-#undef NOCHANTALDEATH
 
     #############################
     # Move hero to the starting position, and eat recall list
@@ -355,4 +350,9 @@
 
         {CHANTAL_FOLLOWS_DELFADOR}
     [/event]
+
+#define NOCHANTALDEATH
+#enddef
+    {MEMOIRS_DEATHS}
+#undef NOCHANTALDEATH
 [/scenario]
