--- a/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
@@ -1,12 +1,10 @@
 #textdomain wesnoth-dm
-
 [scenario]
     id=12_Terror_at_the_Ford_of_Parthyn
     name= _ "Terror at the Ford of Parthyn"
-    next_scenario=13_The_Return_of_Trouble
     {MEMOIRS_MAP 12_Terror_at_the_Ford_of_Parthyn.map}
+    next_scenario=13_The_Return_of_Trouble
     {TURNS 36 36 34}
-
     {DEFAULT_SCHEDULE_DUSK}
 
     {SCENARIO_MUSIC underground.ogg}    # No story text, so no intro music
@@ -16,6 +14,155 @@
     {EXTRA_SCENARIO_MUSIC vengeful.ogg}
 
     {DM_TRACK {CHANTAL_STAGE2} }
+
+    [side]
+        side=1
+        controller=human
+        recruit={ELVES}
+        gold=240
+        fog=yes
+        save_id=Player
+        team_name=allies
+        user_team_name= _ "Loyalists"
+        {FLAG_VARIANT long}
+        {YOUNG_DELFADOR}
+        [unit]
+            {CHANTAL}
+            x,y=32,2
+        [/unit]
+    [/side]
+    [event]
+        name=prestart
+        {MAKE_HERO Chantal}
+        {MODIFY_UNIT (side=1) facing sw}
+    [/event]
+
+    [side]
+        side=2
+        controller=ai
+#ifdef EASY
+        recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
+#endif
+#ifdef NORMAL
+        recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Orcish Slayer, Orcish Warrior, Goblin Spearman
+#endif
+#ifdef HARD
+        recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman, Goblin Impaler, Direwolf Rider
+#endif
+        {GOLD 250 290 370}
+        {INCOME 1 2 4}
+        team_name=enemies
+        user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Upgar
+            name= _ "Upgar"
+            type=Orcish Warlord
+            facing=se
+        [/leader]
+    [/side]
+
+    [side]
+        side=3
+        controller=ai
+#ifdef EASY
+        recruit=Skeleton, Skeleton Archer, Vampire Bat, Ghost
+#endif
+#ifdef NORMAL
+        recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter, Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept
+#endif
+#ifdef HARD
+        recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade, Ghost, Wraith, Shadow, Chocobone, Dark Adept, Spectre, Nightgaunt
+#endif
+        {GOLD 250 290 390}
+        {INCOME 1 2 4}
+        team_name=enemies
+        user_team_name= _ "Undead"
+        {FLAG_VARIANT undead}
+        [leader]
+            id=Dirator
+            name=_ "Dirator"
+            type=Death Knight
+            facing=sw
+        [/leader]
+        [ai]
+            recruitment_pattern=scout,fighter,archer
+            aggression=0.9
+        [/ai]
+    [/side]
+
+    [side]
+        side=4
+        controller=ai
+        recruit=Bowman,Spearman,Cavalryman,Heavy Infantryman,Horseman
+        {GOLD 180 150 120}
+        team_name=allies
+        user_team_name= _ "Loyalists"
+        {FLAG_VARIANT loyalist}
+        [leader]
+            id=Niktor
+            name= _ "Niktor"
+            type=Lieutenant
+            [modifications]
+                {TRAIT_STRONG}
+                {TRAIT_RESILIENT}
+            [/modifications]
+            facing=se
+        [/leader]
+        [ai]
+            # This is so Niktor's men won't move men onto certain
+            # moveto event sights and have the event trigger on the
+            # side change (observer during playtest).
+            [avoid]
+                x,y=34,25
+            [/avoid]
+            [avoid]
+                x,y=29,26
+            [/avoid]
+            [avoid]
+                x,y=29,24
+            [/avoid]
+        [/ai]
+    [/side]
+    # Loyalists get the villages reaching south and west to Parthyn
+    {STARTING_VILLAGES_AREA 4 25 46 10}
+
+    [side]
+        side=5
+        controller=ai
+        recruit=Mage, Arch Mage,Red Mage, White Mage, Silver Mage
+        {GOLD 180 150 120}
+        team_name=allies
+        user_team_name= _ "Mages"
+        [leader]
+            id=Arpus
+            name= _ "Arpus"
+            type=White Mage
+            [modifications]
+                {TRAIT_QUICK}
+                {TRAIT_RESILIENT}
+            [/modifications]
+            facing=nw
+        [/leader]
+        [ai]
+            village_value=0
+            leader_value=0
+            [goal]
+                name=protect_unit
+                [criteria]
+                    side=5
+                    canrecruit=yes
+                [/criteria]
+                value=0
+            [/goal]
+            [avoid] # 5x5 hex centered on keep
+                x=1-60, 1-60,1-36,42-60
+                y=1-37,43-50,1-50, 1-50
+            [/avoid]
+        [/ai]
+    [/side]
+    # Mages get the villages right near their keep
+    {STARTING_VILLAGES 5 2}
 
     [event]
         name=prestart
@@ -78,159 +225,7 @@
     {PLACE_IMAGE scenery/village-human-burned4.png 45 23}
     {PLACE_IMAGE scenery/village-human-burned1.png 49 28}
     {PLACE_IMAGE scenery/village-human-burned2.png 24 7}
-    {PLACE_IMAGE scenery/village-human-burned3.png 32 23}       # has moveto
-
-    [side]
-        {YOUNG_DELFADOR}
-        side=1
-        save_id=Player
-        persistent=yes
-        controller=human
-        recruit={ELVES}
-        team_name=allies
-        user_team_name= _ "Loyalists"
-        fog=yes
-        gold=240
-        {FLAG_VARIANT long}
-    [/side]
-    [event]
-        name=prestart
-        [recall]
-            id=Chantal
-            x,y=32,2
-        [/recall]
-        {MAKE_HERO Chantal}
-        {MODIFY_UNIT (side=1) facing sw}
-    [/event]
-
-    [side]
-        type=Orcish Warlord
-        id=Upgar
-        name= _ "Upgar"
-        facing=se
-        side=2
-        controller=ai
-        canrecruit=yes
-#ifdef EASY
-        recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
-#endif
-
-#ifdef NORMAL
-        recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Orcish Slayer, Orcish Warrior, Goblin Spearman
-#endif
-
-#ifdef HARD
-        recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman, Goblin Impaler, Direwolf Rider
-#endif
-        {GOLD 250 290 370}
-        {INCOME 1 2 4}
-        team_name=enemies
-        user_team_name= _ "Pillagers"
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [side]
-        type=Death Knight
-        id=Dirator
-        name=_ "Dirator"
-        facing=sw
-        side=3
-        team_name=enemies
-        user_team_name= _ "Undead"
-        controller=ai
-
-        {GOLD 250 290 390}
-        {INCOME 1 2 4}
-
-        canrecruit=yes
-        [ai]
-            recruitment_pattern=scout,fighter,archer
-            aggression=0.9
-        [/ai]
-
-#ifdef EASY
-        recruit=Skeleton, Skeleton Archer, Vampire Bat, Ghost
-#endif
-#ifdef NORMAL
-        recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter, Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept
-#endif
-#ifdef HARD
-        recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade, Ghost, Wraith, Shadow, Chocobone, Dark Adept, Spectre, Nightgaunt
-#endif
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        type=Lieutenant
-        id=Niktor
-        name= _ "Niktor"
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-        facing=se
-        side=4
-        controller=ai
-        canrecruit=yes
-        team_name=allies
-        user_team_name= _ "Loyalists"
-        {GOLD 180 150 120}
-        recruit=Bowman,Spearman,Cavalryman,Heavy Infantryman,Horseman
-        [ai]
-            # This is so Niktor's men won't move men onto certain
-            # moveto event sights and have the event trigger on the
-            # side change (observer during playtest).
-            [avoid]
-                x,y=34,25
-            [/avoid]
-            [avoid]
-                x,y=29,26
-            [/avoid]
-            [avoid]
-                x,y=29,24
-            [/avoid]
-        [/ai]
-        {FLAG_VARIANT loyalist}
-    [/side]
-    [side]
-        type=White Mage
-        id=Arpus
-        name= _ "Arpus"
-        [modifications]
-            {TRAIT_QUICK}
-            {TRAIT_RESILIENT}
-        [/modifications]
-        facing=nw
-        side=5
-        controller=ai
-        canrecruit=yes
-        team_name=allies
-        user_team_name= _ "Mages"
-        {GOLD 180 150 120}
-        recruit=Mage, Arch Mage,Red Mage, White Mage, Silver Mage
-        [ai]
-            village_value=0
-            leader_value=0
-            [goal]
-                name=protect_unit
-                [criteria]
-                    side=5
-                    canrecruit=yes
-                [/criteria]
-                value=0
-            [/goal]
-            [avoid] # 5x5 hex centered on keep
-                x=1-60, 1-60,1-36,42-60
-                y=1-37,43-50,1-50, 1-50
-            [/avoid]
-        [/ai]
-    [/side]
-
-    # Loyalists get the villages reaching south and west to Parthyn
-    {STARTING_VILLAGES_AREA 4 25 46 10}
-
-    # Mages get the villages right near their keep
-    {STARTING_VILLAGES 5 2}
+    {PLACE_IMAGE scenery/village-human-burned3.png 32 23}   # has moveto
 
     # Start
     [event]
