--- a/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
@@ -3,16 +3,16 @@
     id=13_The_Return_of_Trouble
     name= _ "The Return of Trouble"
     {MEMOIRS_MAP 13_The_Return_of_Trouble.map}
+    next_scenario=14_Shadows_in_the_Dark
     {TURNS 24 27 30}
     {DEFAULT_SCHEDULE}
+    disallow_recall=yes
 
     {INTRO_AND_SCENARIO_MUSIC northerners.ogg elvish-theme.ogg}
     {EXTRA_SCENARIO_MUSIC wanderer.ogg}
     {EXTRA_SCENARIO_MUSIC elf-land.ogg}
     {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
 
-    next_scenario=14_Shadows_in_the_Dark
-    disallow_recall=yes
     [story]
         [part]
             story=_"While Delfador was still at the Academy, major events were taking place throughout Wesnoth. After centuries of squabbling, a warlord emerged to unite the Orcs. This was ill tidings for men and Elves alike."
@@ -29,29 +29,22 @@
     [/story]
     {DM_TRACK {KALENZ_STAGE1}}
 
-    #### Kalenz's side ####
     # wmllint: recognize Kalenz
     # wmllint: validate-off
     [side]
         side=1
-        no_leader=yes
         controller=human
+        # recruit handled in {KALENZ_TAKES_CONTROL}
+        {GOLD 320 310 380}
+        save_id=Player
         team_name=allies
         user_team_name= _ "Elves"
-        save_id=Player
-        persistent=yes
-        [unit]
-            {KALENZ}
-            facing=sw
-            x=26
-            y=2
-            canrecruit=yes
-        [/unit]
-        {GOLD 320 310 380}
         {FLAG_VARIANT wood-elvish}
+        {KALENZ}
+        canrecruit=yes
+        facing=sw
     [/side]
-    #wmllint: validate-on
-
+    # wmllint: validate-on
     # wmllint: recognize Chantal
     # wmllint: recognize Delfador
 
@@ -60,29 +53,30 @@
         name=prestart
         {KALENZ_TAKES_CONTROL}
     [/event]
-    #### /Kalenz's side ####
 
     [side]
-        type=Orcish Warlord
-        id=Knafa-ord
-        name=_ "Knafa-ord"
-        facing=ne
         side=2
-        canrecruit=yes
+        controller=ai
 #ifdef EASY
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
 #endif
-
 #ifdef NORMAL
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Knight, Orcish Slayer, Goblin Pillager, Goblin Spearman
 #endif
-
 #ifdef HARD
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman
 #endif
         {GOLD 150 230 300}
+        {INCOME 4 8 12}
         team_name=enemies
         user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Knafa-ord
+            name=_ "Knafa-ord"
+            type=Orcish Warlord
+            facing=ne
+        [/leader]
         [ai]
             {NO_SCOUTS}
             recruitment_pattern=scout,fighter,fighter,archer,mixed fighter
@@ -93,32 +87,31 @@
             caution=0.0
             grouping=no
         [/ai]
-        {INCOME 4 8 12}
-        {FLAG_VARIANT6 ragged}
     [/side]
 
     [side]
-        type=Orcish Warlord
-        id=Tan-drul
-        name=_ "Tan-drul"
-        facing=se
         side=3
-        canrecruit=yes
-
+        controller=ai
 #ifdef EASY
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
 #endif
-
 #ifdef NORMAL
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Knight, Orcish Slayer, Goblin Pillager, Goblin Spearman
 #endif
-
 #ifdef HARD
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman
 #endif
         {GOLD 250 300 380}
+        {INCOME 4 8 12}
         team_name=enemies
         user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Tan-drul
+            name=_ "Tan-drul"
+            type=Orcish Warlord
+            facing=se
+        [/leader]
         [ai]
             {NO_SCOUTS}
             recruitment_pattern=scout,fighter,fighter,archer,mixed fighter
@@ -129,32 +122,31 @@
             caution=0.0
             grouping=no
         [/ai]
-        {INCOME 4 8 12}
-        {FLAG_VARIANT6 ragged}
     [/side]
 
     [side]
-        type=Orcish Warlord
-        id=Krardul
-        name=_ "Krardul"
-        facing=sw
         side=4
-        canrecruit=yes
-
+        controller=ai
 #ifdef EASY
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Pillager, Goblin Knight, Goblin Spearman
 #endif
-
 #ifdef NORMAL
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Goblin Knight, Orcish Slayer, Goblin Pillager, Goblin Spearman
 #endif
-
 #ifdef HARD
         recruit=Orcish Archer, Orcish Assassin, Orcish Grunt, Wolf Rider, Orcish Crossbowman, Orcish Warrior, Goblin Knight, Goblin Pillager, Orcish Slayer, Goblin Spearman
 #endif
         {GOLD 250 300 380}
+        {INCOME 4 8 12}
         team_name=enemies
         user_team_name= _ "Pillagers"
+        {FLAG_VARIANT6 ragged}
+        [leader]
+            id=Krardul
+            name=_ "Krardul"
+            type=Orcish Warlord
+            facing=sw
+        [/leader]
         [ai]
             {NO_SCOUTS}
             recruitment_pattern=scout,fighter,fighter,archer,mixed fighter
@@ -165,22 +157,22 @@
             caution=0.0
             grouping=no
         [/ai]
-        {INCOME 4 8 12}
-        {FLAG_VARIANT6 ragged}
     [/side]
 
     [side]
-        type=Elvish Captain
-        id=Clartakis
-        name=_ "Clartakis"
-        facing=nw
         side=5
-        canrecruit=yes
+        controller=ai
         recruit={ELVES}
+        {GOLD 250 250 290}
         team_name=allies
         user_team_name= _ "Elves"
-        {GOLD 250 250 290}
         {FLAG_VARIANT long}
+        [leader]
+            id=Clartakis
+            name=_ "Clartakis"
+            type=Elvish Captain
+            facing=nw
+        [/leader]
     [/side]
 
     [event]
