--- a/data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg
@@ -1,9 +1,9 @@
 #textdomain wesnoth-dm
 [scenario]
-    name=_ "A New Ally"
     id=17_A_New_Ally
-    next_scenario=18_The_Portal_of_Doom
+    name=_ "A New Ally"
     {MEMOIRS_MAP 17_A_New_Ally.map}
+    next_scenario=18_The_Portal_of_Doom
     turns=32
     {DEFAULT_SCHEDULE}
 
@@ -27,67 +27,55 @@
     {DM_TRACK {TRIUMPH_STAGE1}}
 
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
+        recruit={LOYALISTS}
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
-        recruit={LOYALISTS}
         {FLAG_VARIANT loyalist}
+        {YOUNG_DELFADOR}
     [/side]
     [event]
         name=prestart
-
         {RESTORE_WESNOTHIAN_VETERANS}
         {MODIFY_UNIT (side=1) facing nw}
-
-        [unit]
-            {RELGORN}
-            facing=se
-            side=2
-            x,y=5,10
-            ai_special=guardian
-        [/unit]
-        {NAMED_UNIT 2 (Dwarvish Fighter) 9 7 "Udrin" (_"Udrin") (ai_special=guardian)}
-        {FACING se}
     [/event]
 
     [side]
         side=2
-        # wmllint: who ULREK is Ulrek
-        {ULREK}
-        facing=se
         controller=ai
-        canrecruit=yes
         recruit={DWARVES}
-
-        [ai]
-            aggression=0.0
-        [/ai]
         {GOLD 150 130 100}
         income=8
         team_name=allies
         user_team_name= _ "Dwarves"
         {FLAG_VARIANT knalgan}
-    [/side]
-    [side]
-        type=Necromancer
-        id=Gruv-Malal
-        name=_ "Gruv-Malal"
-        facing=sw
-        side=3
+        # wmllint: who ULREK is Ulrek
+        {ULREK}
         canrecruit=yes
+        facing=se
+        [unit]
+            {RELGORN}
+            ai_special=guardian
+            x,y=5,10
+            facing=se
+        [/unit]
+        {NAMED_UNIT 2 (Dwarvish Fighter) 9 7 "Udrin" (_"Udrin") (ai_special=guardian)} {FACING se}
+        [ai]
+            aggression=0.0
+        [/ai]
+    [/side]
+
+    [side]
+        side=3
         controller=ai
 #ifdef EASY
         recruit=Skeleton, Skeleton Archer, Vampire Bat
 #endif
-
 #ifdef NORMAL
         recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter
 #endif
-
 #ifdef HARD
         recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade
 #endif
@@ -95,6 +83,12 @@
         team_name=enemies
         user_team_name= _ "Undead"
         {FLAG_VARIANT undead}
+        [leader]
+            id=Gruv-Malal
+            name=_ "Gruv-Malal"
+            type=Necromancer
+            facing=sw
+        [/leader]
     [/side]
 
     [event]
