--- a/data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg
@@ -2,11 +2,10 @@
 [scenario]
     id=19_Showdown_in_the_Northern_Swamp
     name= _ "Showdown in the Northern Swamp"
-    next_scenario=20_Prince_of_Wesnoth
     {MEMOIRS_MAP 19_Showdown_in_the_Northern_Swamp.map}
+    next_scenario=20_Prince_of_Wesnoth
     {TURNS 24 28 32}
     carryover_percentage=0
-
     {DEFAULT_SCHEDULE}
 
     {INTRO_AND_SCENARIO_MUSIC northerners.ogg the_deep_path.ogg}
@@ -26,57 +25,66 @@
     [/story]
     {DM_TRACK {TRIUMPH_STAGE3}}
 
-    ##### Delfador's side #####
     #wmllint: validate-off
     [side]
-        {YOUNG_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
-        gold=200
         recruit={LOYALISTS},White Mage,Red Mage
+        gold=200
         shroud=yes
+        save_id=Player
         team_name=allies
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT long}
+        {YOUNG_DELFADOR}
+        [unit]
+            {ULREK}
+            # wmllint: unwho ULREK
+            placement=leader
+        [/unit]
     [/side]
     #wmllint: validate-on
-    ##### /Delfador's side #####
+    [event]
+        name=prestart
+        {KALENZ_REJOINS_DELFADOR 26 22}
+        {UNDEAD_REJOIN_DELFADOR}
+        {MODIFY_UNIT (side=1) facing nw}
+    [/event]
 
     [side]
         side=2
-        no_leader=yes
-        gold=200
+        controller=ai
         recruit=Spearman,Horseman,Bowman,Cavalryman,Heavy Infantryman
+        gold=200
         shroud=yes
         team_name=allies
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
+        no_leader=yes
     [/side]
 
     # The strategic challenge should be getting these to cooperate well
     [side]
-        {ILIAH_MALAL (Ancient Lich)}
-        facing=se
         side=3
         controller=ai
-        team_name=enemies
-        user_team_name= _ "Undead"
 #ifdef EASY
         recruit=Skeleton, Skeleton Archer, Vampire Bat, Ghost
 #endif
-
 #ifdef NORMAL
         recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter, Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept
 #endif
-
 #ifdef HARD
         recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade, Ghost, Wraith, Shadow, Nightgaunt, Chocobone, Dark Adept, Spectre, Blood Bat, Vampire Bat
 #endif
-
         {GOLD 300 375 450}
         {INCOME 10 20 30}
+        team_name=enemies
+        user_team_name= _ "Undead"
+        {FLAG_VARIANT undead}
+        [leader]
+            {ILIAH_MALAL (Ancient Lich)}
+            facing=se
+        [/leader]
         [ai]
             recruitment_pattern=scout,fighter,archer
             [goal]
@@ -87,70 +95,57 @@
                 value=10
             [/goal]
         [/ai]
-        {FLAG_VARIANT undead}
     [/side]
 
     [side]
-        type=Necromancer
-        id=Maldun
-        name=_ "Maldun"
-        facing=sw
         side=4
-        canrecruit=yes
         controller=ai
         recruit=Vampire Bat,Dark Adept,Walking Corpse,Ghost,Soulless
+        {GOLD 180 300 375}
+        team_name=enemies
+        user_team_name= _ "Undead"
+        {FLAG_VARIANT undead}
+        [leader]
+            id=Maldun
+            name=_ "Maldun"
+            type=Necromancer
+            facing=sw
+        [/leader]
         #  [ai]
         #      recruitment_pattern=scout,fighter,archer
         #  [/ai]
-        team_name=enemies
-        user_team_name= _ "Undead"
-        {GOLD 180 300 375}
-        {FLAG_VARIANT undead}
     [/side]
 
     [side]
-        type=Death Knight
-        id=Alderoth
-        name=_ "Alderoth"
-        facing=ne
         side=5
-        team_name=enemies
-        user_team_name= _ "Undead"
         controller=ai
-
-        {GOLD 150 210 330}
-        {INCOME 6 8 12}
-
-        canrecruit=yes
-        [ai]
-            recruitment_pattern=scout,fighter,archer
-        [/ai]
-
 #ifdef EASY
         recruit=Skeleton, Skeleton Archer, Vampire Bat
 #endif
-
 #ifdef NORMAL
         recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter, Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept
 #endif
-
 #ifdef HARD
         recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade, Ghost, Wraith, Shadow, Nightgaunt, Chocobone, Dark Adept, Spectre, Blood Bat, Vampire Bat
 #endif
+        {GOLD 150 210 330}
+        {INCOME 6 8 12}
+        team_name=enemies
+        user_team_name= _ "Undead"
         {FLAG_VARIANT undead}
+        [leader]
+            id=Alderoth
+            name=_ "Alderoth"
+            type=Death Knight
+            facing=ne
+        [/leader]
+        [ai]
+            recruitment_pattern=scout,fighter,archer
+        [/ai]
     [/side]
 
     [event]
         name=prestart
-        {KALENZ_REJOINS_DELFADOR 26 22}
-        [unit]
-            {ULREK}
-            # wmllint: unwho ULREK
-            placement=leader
-        [/unit]
-        {UNDEAD_REJOIN_DELFADOR}
-        {MODIFY_UNIT (side=1) facing nw}
-
         [objectives]
             side=1
             [objective]
@@ -533,5 +528,6 @@
         # This is set-up for the next scenario, where Kalenz leads side 1 again
         {DELFADOR_DEPARTS_AGAIN}
     [/event]
+
     {MEMOIRS_DEATHS}
 [/scenario]
