--- a/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
@@ -2,10 +2,10 @@
 [scenario]
     id=21_Clash_at_the_Manor
     name= _ "Clash at the Manor"
-    next_scenario="22_Face_of_the_Enemy"
-    victory_when_enemies_defeated=no
     {MEMOIRS_MAP 21_Clash_at_the_Manor.map}
+    next_scenario=22_Face_of_the_Enemy
     {TURNS 40 32 30}
+    victory_when_enemies_defeated=no
     {DEFAULT_SCHEDULE}
 
     {INTRO_AND_SCENARIO_MUSIC nunc_dimittis.ogg elvish-theme.ogg}
@@ -39,22 +39,19 @@
     [/story]
     {DM_TRACK {BOOK_STAGE3}}
 
-    #### Delfador's code ####
-    #wmllint: validate-off
+    # wmllint: validate-off
     [side]
-        {OLD_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         recruit={ELVES}
+        {GOLD 130 100 100}
+        save_id=Player
         team_name=allies
         user_team_name= _ "Rebels"
-        {GOLD 130 100 100}
         {FLAG_VARIANT long}
+        {OLD_DELFADOR}
     [/side]
-    #wmllint: validate-on
-
+    # wmllint: validate-on
     # wmllint: recognize Kalenz
     # wmllint: recognize Chantal
     [event]
@@ -77,21 +74,22 @@
             [/effect]
         [/object]
     [/event]
-    #### /Delfador's code ####
 
     [side]
-        type=General
-        id=Rhuwin
-        name=_ "Rhuwin"
-        facing=sw
         side=2
-        canrecruit=yes
         controller=ai
-        team_name=enemies
-        user_team_name= _ "Loyalists"
         recruit=Heavy Infantryman,Spearman,Bowman,Swordsman,Pikeman,Longbowman,Shock Trooper,Royal Guard
         {GOLD 180 230 280}
         {INCOME 2 6 10}
+        team_name=enemies
+        user_team_name= _ "Loyalists"
+        {FLAG_VARIANT loyalist}
+        [leader]
+            id=Rhuwin
+            name=_ "Rhuwin"
+            type=General
+            facing=sw
+        [/leader]
         [ai]
             #recruitment_pattern=fighter,archer,mixed fighter,scout
             aggression=1.0
@@ -105,9 +103,7 @@
                 value=3.0
             [/goal]
         [/ai]
-        {FLAG_VARIANT loyalist}
     [/side]
-
     {LIMIT_CONTEMPORANEOUS_RECRUITS 2 (Royal Guard) 1}
 
     [event]
@@ -515,5 +511,6 @@
             result=defeat
         [/endlevel]
     [/event]
+
     {MEMOIRS_DEATHS}
 [/scenario]
