--- a/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
@@ -2,10 +2,9 @@
 [scenario]
     id=22_Face_of_the_Enemy
     name= _ "Face of the Enemy"
-    next_scenario="23_Epilogue"
     {MEMOIRS_MAP 22_Face_of_the_Enemy.map}
+    next_scenario=23_Epilogue
     {TURNS 20 22 24}
-
     {UNDERGROUND}
 
     {INTRO_AND_SCENARIO_MUSIC nunc_dimittis.ogg elvish-theme.ogg}
@@ -25,46 +24,45 @@
 
     #wmllint: validate-off
     [side]
-        {OLD_DELFADOR}
         side=1
-        save_id=Player
-        persistent=yes
         controller=human
         # wmllint: unwho all
         recruit={ELVES}
-        team_name=allies
-        user_team_name= _ "Rebels"
+        {GOLD 130 100 100}
         fog=yes
         shroud=yes
-        {GOLD 130 100 100}
+        save_id=Player
+        team_name=allies
+        user_team_name= _ "Rebels"
         {FLAG_VARIANT long}
+        {OLD_DELFADOR}
     [/side]
     #wmllint: validate-on
 
     [side]
-        type=Lich
-        id="Sagus"
-        name=_ "Sagus"
-        facing=nw
-        profile="portraits/undead/brown-lich.png"
         side=2
-        canrecruit=yes
         controller=ai
-        team_name=enemies
-        user_team_name= _ "Undead"
 #ifdef EASY
         recruit=Skeleton, Skeleton Archer, Vampire Bat, Ghost
 #endif
-
 #ifdef NORMAL
         recruit=Skeleton, Revenant, Skeleton Archer, Bone Shooter, Ghost, Vampire Bat, Blood Bat, Chocobone, Dark Adept
 #endif
-
 #ifdef HARD
         recruit=Skeleton, Skeleton Archer, Revenant, Draug, Banebow, Bone Shooter, Deathblade, Ghost, Wraith, Shadow, Chocobone, Dark Adept, Spectre, Nightgaunt
 #endif
         {GOLD 130 180 230}
         {INCOME 2 4 6}
+        team_name=enemies
+        user_team_name= _ "Undead"
+        {FLAG_VARIANT undead}
+        [leader]
+            id="Sagus"
+            name=_ "Sagus"
+            type=Lich
+            profile="portraits/undead/brown-lich.png"
+            facing=nw
+        [/leader]
         [ai]
             recruitment_pattern=fighter,archer,scout
             aggression=1.0
@@ -78,7 +76,6 @@
                 value=3.0
             [/goal]
         [/ai]
-        {FLAG_VARIANT undead}
     [/side]
 
     [event]
@@ -227,5 +224,6 @@
             message= _ "We are too late! Royal troops are coming! We are trapped!"
         [/message]
     [/event]
+
     {MEMOIRS_DEATHS}
 [/scenario]
