statistics_dialog: Attempt to fix missing left padding before the first column
Currently warns: "error validation: Invalid value '-5' in key 'border_size=' in tag [column]"

... but it looks correct.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -176,8 +176,8 @@
 
 								[column]
 									grow_factor = 1
-									border = "all"
-									border_size = 0
+									border = "left"
+									border_size = 5
 									horizontal_grow = true
 
 									[label]
@@ -189,8 +189,8 @@
 
                                 [column]
                                     grow_factor = 1
-                                    border = "all"
-                                    border_size = 0
+                                    border = "left"
+                                    border_size = -5
                                     horizontal_grow = true
                                     [grid]
                                         linked_group = "detail"
