--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -108,9 +108,9 @@
 	[/listbox]
 #enddef
 
-#define _GUI_DAMAGE_STATS_LIST top_left_label overall_id colid_type colid_overall colid_this_turn ratio_tooltip percent_tooltip
+#define _GUI_DAMAGE_STATS_LIST TOP_LEFT_LABEL OVERALL_ID COLID_TYPE COLID_OVERALL COLID_THIS_TURN RATIO_TOOLTIP PERCENT_TOOLTIP
 	[listbox]
-		id = {overall_id}
+		id = {OVERALL_ID}
 		definition = "default"
 
 		horizontal_scrollbar_mode = "never"
@@ -126,7 +126,7 @@
 
 					[label]
 						definition = "default_small"
-						label = {top_left_label}
+						label = {TOP_LEFT_LABEL}
 						linked_group = "type"
 					[/label]
 				[/column]
@@ -181,7 +181,7 @@
 									horizontal_grow = true
 
 									[label]
-										id = {colid_type}
+										id = {COLID_TYPE}
 										definition = "default"
 										linked_group = "type"
 									[/label]
@@ -203,9 +203,9 @@
                                                 horizontal_grow = true
 
                                                 [label]
-                                                    id = {colid_overall}
+                                                    id = {COLID_OVERALL}
                                                     definition = "default_small"
-                                                    tooltip = {ratio_tooltip}
+                                                    tooltip = {RATIO_TOOLTIP}
                                                 [/label]
                                             [/column]
 
@@ -220,7 +220,7 @@
                                                     definition = "default_small"
                                                     text_alignment = "right"
                                                     use_markup = true
-                                                    tooltip = {percent_tooltip}
+                                                    tooltip = {PERCENT_TOOLTIP}
                                                 [/label]
                                             [/column]
 
@@ -252,9 +252,9 @@
                                                 horizontal_grow = true
 
                                                 [label]
-                                                    id = {colid_this_turn}
+                                                    id = {COLID_THIS_TURN}
                                                     definition = "default_small"
-                                                    tooltip = {ratio_tooltip}
+                                                    tooltip = {RATIO_TOOLTIP}
                                                 [/label]
                                             [/column]
 
@@ -269,7 +269,7 @@
                                                     definition = "default_small"
                                                     text_alignment = "right"
                                                     use_markup = true
-                                                    tooltip = {percent_tooltip}
+                                                    tooltip = {PERCENT_TOOLTIP}
                                                 [/label]
                                             [/column]
 
