ANL: use unsynced help menu

--- a/data/multiplayer/scenarios/ANL_utils/ANL_help.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_help.cfg
@@ -4,8 +4,6 @@
     [option]
         label= _ "Return to menu"
         [command]
-            #[allow_undo]
-            #[/allow_undo]
         [/command]
     [/option]
 #enddef
@@ -84,10 +82,10 @@
 #define ANL_HELP
     [set_menu_item]
         id=anl_help
+        synced=no
         description= _ "Help"
         [show_if]
             [have_unit]
-                side=$side_number
                 x,y=$x1,$y1
                 canrecruit=yes
             [/have_unit]
@@ -172,6 +170,9 @@
                     [/message]
                 [/do]
             [/while]
+            [clear_variable]
+                name=finished_help
+            [/clear_variable]
         [/command]
     [/set_menu_item]
 #enddef
