ANL: new objectives screen

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -27,16 +27,7 @@
         [/part]
     [/story]
 
-    [event]
-        name=prestart
-        [objectives]
-            summary="<small>" + _ "Right-click on your leader for help" + "</small>" # wmllint: no spellcheck
-            [objective]
-                description= _ "You must survive until turn 25"
-                condition=win
-            [/objective]
-        [/objectives]
-    [/event]
+    {OBJECTIVES_ANL}
 #endif
 
     # ------------------------------------------------------
