ANL: code cleanup

--- a/data/multiplayer/scenarios/ANL_utils/ANL_help.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_help.cfg
@@ -92,7 +92,7 @@
             [while]
                 [variable]
                     name=finished_help
-                    equals=no
+                    boolean_equals=no
                 [/variable]
 
                 [do]
