--- a/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
@@ -284,7 +284,7 @@ Share knowledge of warfare"
             [while]
                 [variable]
                     name=finished_options
-                    equals=no
+                    boolean_equals=no
                 [/variable]
 
                 [do]
@@ -322,7 +322,7 @@ Give 20 gold to another player"
                                 [while]
                                     [variable]
                                         name=finished_suboptions
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
 
                                     [do]
@@ -367,7 +367,7 @@ Help an ally with their research"
                                 [while]
                                     [variable]
                                         name=finished_suboptions
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
 
                                     [do]
@@ -420,27 +420,27 @@ Negotiation Progress: $player_$side_number|.leader_option_1.progress|/$player_$s
                             [show_if]
                                 [variable]
                                     name=player_$side_number|.ally_1
-                                    equals=no
+                                    boolean_equals=no
                                 [/variable]
 
                                 [or]
                                     [variable]
                                         name=player_$side_number|.ally_2
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
                                 [/or]
 
                                 [or]
                                     [variable]
                                         name=player_$side_number|.ally_3
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
                                 [/or]
 
                                 [or]
                                     [variable]
                                         name=player_$side_number|.ally_4
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
                                 [/or]
                             [/show_if]
@@ -476,27 +476,27 @@ Negotiation Progress: $player_$side_number|.leader_option_2.progress|/$player_$s
                             [show_if]
                                 [variable]
                                     name=player_$side_number|.ally_5
-                                    equals=no
+                                    boolean_equals=no
                                 [/variable]
 
                                 [or]
                                     [variable]
                                         name=player_$side_number|.ally_6
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
                                 [/or]
 
                                 [or]
                                     [variable]
                                         name=player_$side_number|.ally_7
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
                                 [/or]
 
                                 [or]
                                     [variable]
                                         name=player_$side_number|.ally_8
-                                        equals=no
+                                        boolean_equals=no
                                     [/variable]
                                 [/or]
                             [/show_if]
