--- a/data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg
@@ -117,7 +117,7 @@
             [while]
                 [variable]
                     name=finished_options
-                    equals=no
+                    boolean_equals=no
                 [/variable]
 
                 [do]
@@ -196,7 +196,7 @@ Study Progress: $player_$side_number|.warfare.progress|/$player_$side_number|.wa
             [if]
                 [variable]
                     name=cancelled
-                    not_equals=yes
+                    boolean_equals=no
                 [/variable]
 
                 [then]
@@ -211,6 +211,10 @@ Study Progress: $player_$side_number|.warfare.progress|/$player_$side_number|.wa
                     #[/allow_undo]
                 [/else]
             [/if]
+
+            [clear_variable]
+                name=finished_options,cancelled
+            [/clear_variable]
         [/command]
     [/set_menu_item]
 #enddef
