--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -132,7 +132,7 @@
         [show_if]
             [variable]
                 name=player_$side_number|.{VAR}
-                equals=no
+                boolean_equals=no
             [/variable]
         [/show_if]
         [command]
