--- a/data/multiplayer/scenarios/ANL_utils/ANL_worker_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_worker_options.cfg
@@ -35,7 +35,7 @@
             [while]
                 [variable]
                     name=finished
-                    equals=no
+                    boolean_equals=no
                 [/variable]
 
                 [do]
@@ -593,6 +593,10 @@
                     [/message]
                 [/do]
             [/while]
+
+            [clear_variable]
+                name=finished
+            [/clear_variable]
         [/command]
     [/set_menu_item]
 #enddef
