ANL: disable swamp trick
- by building a house between the swamp and the guardian the restriction
  could have been bypassed. And because attacking a unit next to the swamp
   has higher priority compared to capturing the house it's not very dangerous
- also use the same macro for guardians and leaders movement restrictions

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -123,7 +123,7 @@
         name= _ "Mal Sevu"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
         [modifications]
-            {MOVEMENT_RESTRICTION flat shallow_water}
+            {MOVEMENT_RESTRICTION}
         [/modifications]
         [ai]
             aggression=1.0
@@ -154,7 +154,7 @@
         name= _ "Gol Goroth"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
         [modifications]
-            {MOVEMENT_RESTRICTION flat shallow_water}
+            {MOVEMENT_RESTRICTION}
         [/modifications]
         [ai]
             aggression=1.0
@@ -185,7 +185,7 @@
         name= _ "Greg"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
         [modifications]
-            {MOVEMENT_RESTRICTION flat shallow_water}
+            {MOVEMENT_RESTRICTION}
         [/modifications]
         [ai]
             aggression=1.0
@@ -216,7 +216,7 @@
         name= _ "Mal Shiki"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
         [modifications]
-            {MOVEMENT_RESTRICTION flat shallow_water}
+            {MOVEMENT_RESTRICTION}
         [/modifications]
         [ai]
             aggression=1.0
