--- a/data/multiplayer/scenarios/ANL_utils/ANL_general_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_general_macros.cfg
@@ -8,15 +8,19 @@
     [/capture_village]
 #enddef
 
-#define MOVEMENT_RESTRICTION TERR1_NAME TERR2_NAME
+#define MOVEMENT_RESTRICTION
     [object]
+        silent=yes
         duration=forever
         [effect]
             apply_to=movement_costs
             replace=true
             [movement_costs]
-                {TERR1_NAME}={UNREACHABLE}
-                {TERR2_NAME}={UNREACHABLE}
+                flat={UNREACHABLE}
+                sand={UNREACHABLE}
+                shallow_water={UNREACHABLE}
+                swamp_water={UNREACHABLE}
+                deep_water={UNREACHABLE}
             [/movement_costs]
         [/effect]
     [/object]
