--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -258,18 +258,7 @@
         x={X}
         y={Y}
         [modifications]
-            [object]
-                duration=forever
-                [effect]
-                    apply_to=movement_costs
-                    replace=true
-                    [movement_costs]
-                        flat={UNREACHABLE}
-                        sand={UNREACHABLE}
-                        shallow_water={UNREACHABLE}
-                    [/movement_costs]
-                [/effect]
-            [/object]
+            {MOVEMENT_RESTRICTION}
         [/modifications]
     [/unit]
 #enddef
