DM: Eliminate use of a macro
ELVISH_NPCS_REAPPEAR was used inconsistently, and at odds with current
handling in DELFADOR_DEPARTS_AGAIN & DELFADOR_JOINS_ELVES.
Also improves change level compatability.

--- a/data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg
@@ -143,6 +143,7 @@
     [event]
         name=start
 
+        # recall is here instead of [unit] in [side], as she is unpacked in {DELFADOR_JOINS_ELVES}
         [recall]
             id=Chantal
         [/recall]
