--- a/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
@@ -50,13 +50,20 @@
         user_team_name= _ "Rebels"
         {FLAG_VARIANT long}
         {OLD_DELFADOR}
+        [unit]
+            {KALENZ}
+            placement=leader
+        [/unit]
+        [unit]
+            {CHANTAL}
+            placement=leader
+        [/unit]
     [/side]
     # wmllint: validate-on
     # wmllint: recognize Kalenz
     # wmllint: recognize Chantal
     [event]
         name=prestart
-        {ELVISH_NPCS_REAPPEAR}
         {MODIFY_UNIT (side=1) facing ne}
         [object]
             silent=yes
