--- a/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
@@ -36,6 +36,14 @@
         user_team_name= _ "Rebels"
         {FLAG_VARIANT long}
         {OLD_DELFADOR}
+        [unit]
+            {KALENZ}
+            placement=leader
+        [/unit]
+        [unit]
+            {CHANTAL}
+            placement=leader
+        [/unit]
     [/side]
     #wmllint: validate-on
 
@@ -109,12 +117,6 @@
         name=start
 
         {MODIFY_UNIT (side=1) facing sw}
-        [recall]
-            id=Kalenz
-        [/recall]
-        [recall]
-            id=Chantal
-        [/recall]
         [message]
             speaker=Chantal
             message= _ "There is no doubt the book is here; I can feel its presence."
